--- a/composer.json
+++ b/composer.json
@@ -1,23 +1,23 @@
 {
-  "name": "pepijnolivier/laravel-bittrex",
+  "name": "adman9000/laravelbittrex",
   "description": "Bittrex API wrapper for Laravel",
   "tags": ["bittrex", "api", "laravel"],
   "type": "library",
   "license": "MIT",
   "authors": [
     {
-      "name": "Pepijn Olivier",
-      "email": "olivier.pepijn@gmail.com"
+      "name": "Adam Harding",
+      "email": "myaddressistaken@googlemail.com"
     }
   ],
   "require": {
-    "php": ">=7.0.0",
+    "php": ">=5.6.4",
     "ext-curl": "*",
     "laravel/framework": ">=5.3"
   },
   "autoload": {
     "psr-4": {
-      "Pepijnolivier\\Bittrex\\": "src/"
+      "adman9000\\Bittrex\\": "src/"
     }
   },
   "minimum-stability": "dev"
